--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -10,4 +10,11 @@
         android:layout_height="wrap_content"
         android:text="主页"/>
 
+    <ImageView
+        android:layout_width="match_parent"
+        android:layout_height="200dp"
+        android:foreground="@drawable/ripple_click_blue"
+        android:src="@drawable/ff"
+        android:clickable="true"/>
+
 </LinearLayout>
