--- a/app/src/main/res/values/attrs.xml
+++ b/app/src/main/res/values/attrs.xml
@@ -10,4 +10,37 @@
         <attr name="startRingColor" format="color"/>
         <attr name="endRingColor" format="color"/>
     </declare-styleable>
+
+    <declare-styleable name="RadarWaveView">
+        <!--是否展示双波-->
+        <attr name="showDoubleWave" format="boolean"/>
+        <!--波形颜色-->
+        <attr name="waveColor" format="color" />
+        <attr name="wave2Color" format="color" />
+        <!--振幅-->
+        <attr name="waveAmplitude" format="dimension" />
+        <attr name="wave2Amplitude" format="dimension" />
+        <!--波形移动速度-->
+        <attr name="waveSpeed" format="float" />
+        <attr name="wave2Speed" format="float" />
+        <!--开始位置相差多少个周期-->
+        <attr name="waveStartPeriod" format="float" />
+        <attr name="wave2StartPeriod" format="float" />
+        <!--是否开始波形-->
+        <attr name="waveStart" format="boolean" />
+        <!--是否填充顶部后者底部-->
+        <attr name="waveFillTop" format="boolean" />
+        <attr name="waveFillBottom" format="boolean" />
+
+        <attr name="waveFillType" format="enum">
+            <enum name="top" value="0" />
+            <enum name="bottom" value="1" />
+        </attr>
+        <!--波形是正弦还是余弦-->
+        <attr name="waveType" format="enum">
+            <enum name="sin" value="0" />
+            <enum name="cos" value="1" />
+        </attr>
+
+    </declare-styleable>
 </resources>
