--- a/app/src/main/res/layout/fragment_doctor.xml
+++ b/app/src/main/res/layout/fragment_doctor.xml
@@ -23,4 +23,10 @@
         android:layout_height="wrap_content"
         android:text="双波纹效果"/>
 
+    <Button
+        android:id="@+id/btn_ruler"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="刻度尺"/>
+
 </LinearLayout>
