--- a/app/src/main/res/values/attrs.xml
+++ b/app/src/main/res/values/attrs.xml
@@ -43,4 +43,31 @@
         </attr>
 
     </declare-styleable>
+
+    <declare-styleable name="RulerView">
+        <attr name="textColor" format="color" />
+        <attr name="textSize" format="dimension" />
+        <attr name="lineColor" format="color" />
+        <attr name="lineSpaceWidth" format="dimension" />
+        <attr name="lineWidth" format="dimension" />
+        <attr name="lineMaxHeight" format="dimension" />
+        <attr name="lineMidHeight" format="dimension" />
+        <attr name="lineMinHeight" format="dimension" />
+        <attr name="textMarginTop" format="dimension" />
+        <attr name="alphaEnable" format="boolean" />
+        <attr name="minValue" format="float"/>
+        <attr name="maxValue" format="float"/>
+        <attr name="selectorValue" format="float"/>
+        <attr name="perValue" format="float"/>
+        <attr name="perLineCount" format="integer"/>
+        <attr name="pointerType" format="enum">
+            <enum name="line" value="0"/>
+            <enum name="pointer" value="1"/>
+        </attr>
+        <!--当type=1时-->
+        <attr name="middlePointer" format="reference"/>
+        <attr name="pointerTop" format="float"/>
+        <!--当type=0时-->
+        <attr name="pointerColor" format="color"/>
+    </declare-styleable>
 </resources>
