--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,6 +4,8 @@
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
 
+    <color name="holo_red_dark">#ffcc0000</color>
+
     <color name="white">#ffffff</color>
     <color name="blue_bg">#336699</color>
     <color name="blue_dark">#248CCE</color>
