--- a/app/src/main/res/layout/fragment_kardia.xml
+++ b/app/src/main/res/layout/fragment_kardia.xml
@@ -36,8 +36,7 @@
             android:layout_marginTop="5.0dip"
             android:gravity="center_horizontal"
             android:text="@string/ecg_real_time_text_1"
-            android:textAppearance="@android:style/TextAppearance.Medium"
-            android:visibility="gone"/>
+            android:textAppearance="@android:style/TextAppearance.Medium"/>
 
         <LinearLayout
             android:layout_width="wrap_content"
