--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -70,7 +70,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="0dp"
                 android:layout_weight="1"
-                android:text="医生"
+                android:text="自定义"
                 android:gravity="center"
                 android:textSize="16sp"
                 android:textColor="@color/gray_dark"/>
@@ -109,7 +109,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="0dp"
                 android:layout_weight="1"
-                android:text="消息"
+                android:text="动画"
                 android:gravity="center"
                 android:textSize="16sp"
                 android:textColor="@color/gray_dark"/>
