--- a/app/src/main/res/layout/fragment_doctor.xml
+++ b/app/src/main/res/layout/fragment_doctor.xml
@@ -29,4 +29,10 @@
         android:layout_height="wrap_content"
         android:text="刻度尺"/>
 
+    <Button
+        android:id="@+id/btn_path"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Path"/>
+
 </LinearLayout>
