--- a/app/src/main/res/layout/fragment_kardia.xml
+++ b/app/src/main/res/layout/fragment_kardia.xml
@@ -7,6 +7,11 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"/>
 
+    <com.test.newproject.ecgmonitor.EcgRealTimeView
+        android:id="@+id/view_ecgrealtime"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"/>
+
     <LinearLayout
         android:id="@+id/instructions"
         android:layout_width="wrap_content"
@@ -109,7 +114,7 @@
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical"
-            android:visibility="visible">
+            android:visibility="gone">
 
             <ProgressBar
                 android:id="@+id/pbar_rec"
@@ -367,5 +372,14 @@
         android:paddingRight="10.0dip"
         android:text="@string/record_ecg"
         android:visibility="gone"/>
+
+    <Button
+        android:id="@+id/btn_test"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_marginBottom="20dp"
+        android:layout_marginLeft="20dp"
+        android:text="测试"/>
 
 </RelativeLayout>
